<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="CeO-bI-H4V">
    <device id="retina6_5" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--LoginVC-->
        <scene sceneID="ZnZ-2q-8n2">
            <objects>
                <viewController storyboardIdentifier="LoginVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="CeO-bI-H4V" customClass="LoginVC" customModule="IOSPortifolio" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="V3f-rL-zQ4">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_OctoCat" translatesAutoresizingMaskIntoConstraints="NO" id="NVH-PM-6wC">
                                <rect key="frame" x="121.66666666666667" y="174" width="170.66666666666663" height="200"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="200" id="0Cc-0e-Duf"/>
                                </constraints>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username or Email:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fQ9-5N-iLL">
                                <rect key="frame" x="132.66666666666666" y="438" width="148.99999999999997" height="20"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="20" id="7ab-2N-hh9"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter with you username or email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="l1c-Jq-rIH">
                                <rect key="frame" x="20" y="466" width="374" height="40"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="L3d-v5-8q9"/>
                                </constraints>
                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="yes" keyboardType="alphabet" returnKeyType="next" enablesReturnKeyAutomatically="YES"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aZc-8m-r0K">
                                <rect key="frame" x="170.33333333333334" y="522" width="73.666666666666657" height="20"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="20" id="DhF-gR-kJA"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type your key here" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1Jx-JB-4um">
                                <rect key="frame" x="20" y="550" width="374" height="40"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="5ce-0n-oPu"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="alphabet" returnKeyType="go" secureTextEntry="YES"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X9t-eS-EkT">
                                <rect key="frame" x="107" y="622" width="200" height="40"/>
                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="200" id="LuN-2x-LoG"/>
                                    <constraint firstAttribute="height" constant="40" id="Xs6-Da-Ya2"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="tapLoginBtn:" destination="CeO-bI-H4V" eventType="touchUpInside" id="ge2-nU-ARU"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstItem="l1c-Jq-rIH" firstAttribute="top" secondItem="fQ9-5N-iLL" secondAttribute="bottom" constant="8" id="4GR-tp-YHl"/>
                            <constraint firstItem="l1c-Jq-rIH" firstAttribute="leading" secondItem="DQq-pz-JnA" secondAttribute="leading" constant="20" id="6IP-CW-Kxj"/>
                            <constraint firstItem="1Jx-JB-4um" firstAttribute="leading" secondItem="DQq-pz-JnA" secondAttribute="leading" constant="20" id="Cqi-GP-IzZ"/>
                            <constraint firstItem="X9t-eS-EkT" firstAttribute="centerX" secondItem="V3f-rL-zQ4" secondAttribute="centerX" id="EUF-FH-v9w"/>
                            <constraint firstItem="fQ9-5N-iLL" firstAttribute="centerX" secondItem="V3f-rL-zQ4" secondAttribute="centerX" id="MhI-dz-x1B"/>
                            <constraint firstItem="aZc-8m-r0K" firstAttribute="top" secondItem="l1c-Jq-rIH" secondAttribute="bottom" constant="16" id="P8R-T3-R5Y"/>
                            <constraint firstItem="DQq-pz-JnA" firstAttribute="trailing" secondItem="l1c-Jq-rIH" secondAttribute="trailing" constant="20" id="PHk-JQ-Fw0"/>
                            <constraint firstItem="NVH-PM-6wC" firstAttribute="centerX" secondItem="V3f-rL-zQ4" secondAttribute="centerX" id="Rx5-ef-SqQ"/>
                            <constraint firstItem="fQ9-5N-iLL" firstAttribute="centerY" secondItem="V3f-rL-zQ4" secondAttribute="centerY" id="dAj-b5-BBc"/>
                            <constraint firstItem="X9t-eS-EkT" firstAttribute="top" secondItem="1Jx-JB-4um" secondAttribute="bottom" constant="32" id="eeS-IN-0AH"/>
                            <constraint firstItem="aZc-8m-r0K" firstAttribute="centerX" secondItem="V3f-rL-zQ4" secondAttribute="centerX" id="lhC-fB-vn9"/>
                            <constraint firstItem="1Jx-JB-4um" firstAttribute="top" secondItem="aZc-8m-r0K" secondAttribute="bottom" constant="8" id="sNx-1k-4gV"/>
                            <constraint firstItem="fQ9-5N-iLL" firstAttribute="top" secondItem="NVH-PM-6wC" secondAttribute="bottom" constant="64" id="yqw-CJ-SDI"/>
                            <constraint firstItem="DQq-pz-JnA" firstAttribute="trailing" secondItem="1Jx-JB-4um" secondAttribute="trailing" constant="20" id="zoo-GH-BO1"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="DQq-pz-JnA"/>
                    </view>
                    <connections>
                        <outlet property="passwordInputText" destination="1Jx-JB-4um" id="3Ah-Yz-jih"/>
                        <outlet property="userInputText" destination="l1c-Jq-rIH" id="sdq-Sd-j1h"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="phN-yL-0C2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="147.82608695652175" y="62.946428571428569"/>
        </scene>
    </scenes>
    <resources>
        <image name="ic_OctoCat" width="170.66667175292969" height="170.66667175292969"/>
    </resources>
</document>
