...
              DispatchQueue.main.async {
                  switch result {
                  case .success(let result):
                      self.userInfo = result ?? UserResponse()
                      self.setNewRootControler(storyboardID: "MainTabVC", storyboardName: "Home")
                  case .failure(let error):
                      AlertDialogManager.ShowAlertDialog(title: "Error in get user info", message: error.userMessage ?? "", self)
                      
                  }
              }
          }

    }
...
