...
import UIKit

class AlertDialogManager {
    
    static func BuildAlertDialog(title: String, message: String, preferredStyle: UIAlertController.Style, handler: @escaping (UIAlertAction) -> Void) -> UIAlertController  {
        let ac = UIAlertController.init(title: title, message: message, preferredStyle: preferredStyle)
        ac.addAction(UIAlertAction.init(title: "OK", style: .default, handler: handler))
        return ac
    }
    
    /// Show an alert dialog, with a single AlertActions given by handler
    /// - Parameters:
    ///   - title: Title messafe of alert dialog.
...
