...

/// Http modes to make the request.
enum httpMode : String{
    case post
    case get
    case put
    case delete
    case update
    case patch
    
    var value : String {
        switch self {
        case .post: return "POST"
...
